--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.dat
+*.pdb
+.idea/
+.vs/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
