--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
-# Visual Studio 2015/2017 cache/options directory_path
+# Visual Studio 2015/2017 cache/options mc_directory_path
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
@@ -180,7 +180,7 @@ DocProject/Help/*.hhp
 DocProject/Help/Html2
 DocProject/Help/html
 
-# Click-Once directory_path
+# Click-Once mc_directory_path
 publish/
 
 # Publish Web Output
